# DSAN-5400Final-Project

./: .gitignore  README.md  db_access.py  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
db_access_module/: db_access.py
final_project/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
final_project/docs/: Makefile  conf.py  example.ipynb  make.bat
final_project/src/app/: build_BM25.py  colbert_app.py  df_cut.py  final.py
final_project/src/colbert/: colbert_and_voyager.ipynb
final_project/src/eda/: EDA.py
final_project/src/final_project/: __init__.py
final_project/src/mbfc/: clean.py  scrape.py
final_project/tests/: test_final_project.py
mbfc_scrape/: clean.py  mbfc.csv  mbfc_raw-1731489978.csv
streamlit/: config.toml
tests/: test_clean.py  test_dbaccess.py  test_scrape.py
